--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
      </div>
      <footer class="mdc-dialog__actions">
        <button type="button" class="mdc-button mdc-dialog__button" data-mdc-dialog-action="close">
-         <span class="mdc-button__label">Cancel</span>
+         <span class="mdc-button__label">Find Public Game</span>
        </button>
        <button type="button" class="mdc-button mdc-dialog__button" data-mdc-dialog-action="accept">
-         <span class="mdc-button__label">OK</span>
+         <span class="mdc-button__label">Join Private Game</span>
        </button>
      </footer>
    </div>
