--- a/index.html
+++ b/index.html
@@ -11,55 +11,12 @@
 <link rel="stylesheet" type="text/css" href="./style/index.css" />
 <link rel="stylesheet" type="text/css" href="./style/comments.css" />
 
+<!--TODO checkme-->
+<link rel="stylesheet" type="text/css" href="./style/mdc-dialog.css"/>
+
 </head>
 <body>
 
-    <div class="mdc-dialog"
-    role="alertdialog"
-    aria-modal="true"
-    aria-labelledby="my-dialog-title"
-    aria-describedby="my-dialog-content">
- <div class="mdc-dialog__container">
-   <div class="mdc-dialog__surface">
-     <!-- Title cannot contain leading whitespace due to mdc-typography-baseline-top() -->
-     <h2 class="mdc-dialog__title" id="my-dialog-title"><!--
-    -->Choose a Ringtone<!--
-  --></h2>
-     <div class="mdc-dialog__content" id="my-dialog-content">
-       <ul class="mdc-list">
-         <li class="mdc-list-item" tabindex="0">
-           <span class="mdc-list-item__graphic">
-             <div class="mdc-radio">
-               <input class="mdc-radio__native-control"
-                      type="radio"
-                      id="test-dialog-baseline-confirmation-radio-1"
-                      name="test-dialog-baseline-confirmation-radio-group"
-                      checked>
-               <div class="mdc-radio__background">
-                 <div class="mdc-radio__outer-circle"></div>
-                 <div class="mdc-radio__inner-circle"></div>
-               </div>
-             </div>
-           </span>
-           <label id="test-dialog-baseline-confirmation-radio-1-label"
-                  for="test-dialog-baseline-confirmation-radio-1"
-                  class="mdc-list-item__text">None</label>
-         </li>
-         <!-- ... -->
-       </ul>
-     </div>
-     <footer class="mdc-dialog__actions">
-       <button type="button" class="mdc-button mdc-dialog__button" data-mdc-dialog-action="close">
-         <span class="mdc-button__label">Find Public Game</span>
-       </button>
-       <button type="button" class="mdc-button mdc-dialog__button" data-mdc-dialog-action="accept">
-         <span class="mdc-button__label">Join Private Game</span>
-       </button>
-     </footer>
-   </div>
- </div>
- <div class="mdc-dialog__scrim"></div>
-</div>
 <script src="./bundle.js"></script>
 
 </body>
