--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 
 <meta charset="utf-8" />
-<title>Sabaki</title>
-<meta name="author" content="Yichuan Shen" />
+<title>🐛 BUGOUT 🐛</title>
+<meta name="author" content="Terkwood (multiplayer), Yichuan Shen (UI)" />
 
 <link rel="shortcut icon" href="./build/icon.ico" type="image/x-icon">
 <link rel="stylesheet" type="text/css" href="./style/app.css" />
